Fix custom scrollbar for webkit

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -1,23 +1,23 @@
 /* better scrollbar for Chrome and Safari */
-article {
+main {
   scroll-behavior: smooth;
 }
 @media screen and (min-width: 62em) {
-  article::-webkit-scrollbar {
+  main::-webkit-scrollbar {
     display: block;
   }
-  article::-webkit-scrollbar-track {
-    background-color: var(--chakra-colors-chakra-border-color);
+  main::-webkit-scrollbar-track {
+    background-color: var(--default-bg);
   }
-  article::-webkit-scrollbar-thumb {
+  main::-webkit-scrollbar-thumb {
     visibility: hidden;
     background-color: rgba(0, 0, 0, 0.2);
     transition-duration: 500ms;
   }
-  article:hover::-webkit-scrollbar-thumb {
+  main:hover::-webkit-scrollbar-thumb {
     visibility: visible;
   }
-  [data-theme="dark"] article::-webkit-scrollbar-thumb {
+  .dark main::-webkit-scrollbar-thumb {
     background-color: rgba(255, 255, 255, 0.2);
   }
 }
